--- a/MDK-ARM/FDI/FDI.build_log.htm
+++ b/MDK-ARM/FDI/FDI.build_log.htm
@@ -27,7 +27,14 @@ Project File Date:  04/13/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'FlightControler'
-"FDI\FDI.axf" - 0 Error(s), 0 Warning(s).
+compiling receiver.c...
+..\Code\Src\receiver.c(16): warning:  #177-D: variable "n"  was declared but never referenced
+  	uint8_t n = 0;
+..\Code\Src\receiver.c: 1 warning, 0 errors
+linking...
+Program Size: Code=49596 RO-data=3740 RW-data=244 ZI-data=34236  
+FromELF: creating hex file...
+"FDI\FDI.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
