--- a/MDK-ARM/FDI/FDI.build_log.htm
+++ b/MDK-ARM/FDI/FDI.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.30.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      UL2CM3.DLL V1.163.3.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
@@ -27,14 +27,11 @@ Project File Date:  04/13/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'FlightControler'
-compiling receiver.c...
-..\Code\Src\receiver.c(16): warning:  #177-D: variable "n"  was declared but never referenced
-  	uint8_t n = 0;
-..\Code\Src\receiver.c: 1 warning, 0 errors
+compiling taskinit.c...
 linking...
-Program Size: Code=49596 RO-data=3740 RW-data=244 ZI-data=34236  
+Program Size: Code=49636 RO-data=3740 RW-data=248 ZI-data=34232  
 FromELF: creating hex file...
-"FDI\FDI.axf" - 0 Error(s), 1 Warning(s).
+"FDI\FDI.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
