初步添加了飞控的控制功能

--- a/MDK-ARM/FDI/FDI.build_log.htm
+++ b/MDK-ARM/FDI/FDI.build_log.htm
@@ -21,20 +21,97 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
-E:\飞控资料\FlightControler-main\MDK-ARM\FlightControler.uvprojx
-Project File Date:  04/26/2025
+E:\飞控资料\FlightControler-main - 副本\MDK-ARM\FlightControler.uvprojx
+Project File Date:  04/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keilv5\ARM\ARMCC\Bin'
-Build target 'FlightControler'
+Rebuild target 'FlightControler'
+assembling startup_stm32h743xx.s...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_timebase_tim.c...
+compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_cortex.c...
+compiling stm32h7xx_hal_flash.c...
+compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_msp.c...
+compiling freertos.c...
+compiling main.c...
+compiling stm32h7xx_hal_rcc.c...
+compiling stm32h7xx_hal_rcc_ex.c...
+compiling stm32h7xx_hal_tim.c...
+compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_mmc.c...
+compiling stm32h7xx_ll_delayblock.c...
+compiling stm32h7xx_hal_dma_ex.c...
+compiling stm32h7xx_ll_sdmmc.c...
+compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal_sd_ex.c...
+compiling stm32h7xx_hal_exti.c...
+compiling stm32h7xx_hal_i2c_ex.c...
+compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal_sd.c...
+compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_mmc_ex.c...
+compiling stm32h7xx_hal_pwr_ex.c...
+compiling stm32h7xx_hal_i2c.c...
+compiling croutine.c...
+compiling event_groups.c...
+compiling list.c...
+compiling queue.c...
+compiling stream_buffer.c...
+compiling timers.c...
+compiling tasks.c...
+compiling heap_1.c...
+compiling cmsis_os.c...
+compiling port.c...
+compiling system_stm32h7xx.c...
+compiling stm32h7xx_hal_uart_ex.c...
+compiling signal.c...
+compiling bsp_driver_sd.c...
+compiling telemetry.c...
+compiling fatfs_platform.c...
+compiling CRC_Table.c...
+compiling diskio.c...
+compiling syscall.c...
+compiling control.c...
+compiling ff_gen_drv.c...
+compiling navigation.c...
+compiling ccsbcs.c...
+compiling fatfs.c...
+compiling sd_diskio.c...
+compiling jy901b.c...
+compiling ff.c...
+compiling stm32h7xx_hal_uart.c...
+compiling tf.c...
 compiling taskinit.c...
-..\Code\Src\taskinit.c(114): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *__restrict__"
+..\Code\Src\taskinit.c(113): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *__restrict__"
   		sprintf(s,"n:%u\r\n",num);
 ..\Code\Src\taskinit.c: 1 warning, 0 errors
+compiling FDI_send.c...
+..\HardWare\FDILink\FDI_send.c(720): warning:  #940-D: missing return statement at end of non-void function "fdiSendExternalData" 
+  }
+..\HardWare\FDILink\FDI_send.c: 1 warning, 0 errors
+compiling receiver.c...
+compiling FDILink.c...
+..\HardWare\FDILink\FDILink.c(342): warning:  #940-D: missing return statement at end of non-void function "fdiGetPacket" 
+  }
+..\HardWare\FDILink\FDILink.c(364): warning:  #940-D: missing return statement at end of non-void function "fdiComGetAxis" 
+  }
+..\HardWare\FDILink\FDILink.c(387): warning:  #940-D: missing return statement at end of non-void function "fdiComGetAnte" 
+  }
+..\HardWare\FDILink\FDILink.c(442): warning:  #940-D: missing return statement at end of non-void function "fdiGetDgnss" 
+  }
+..\HardWare\FDILink\FDILink.c(467): warning:  #940-D: missing return statement at end of non-void function "fdiComGetParam" 
+  }
+..\HardWare\FDILink\FDILink.c: 5 warnings, 0 errors
+compiling siyi.c...
+compiling stm32h7xx_it.c...
 linking...
-Program Size: Code=50924 RO-data=3740 RW-data=332 ZI-data=34716  
+Program Size: Code=51804 RO-data=3756 RW-data=408 ZI-data=34720  
 FromELF: creating hex file...
-"FDI\FDI.axf" - 0 Error(s), 1 Warning(s).
+"FDI\FDI.axf" - 0 Error(s), 7 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +134,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:43
 </pre>
 </body>
 </html>
