--- a/MDK-ARM/FDI/FDI.build_log.htm
+++ b/MDK-ARM/FDI/FDI.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  05/09/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'FlightControler'
+compiling taskinit.c...
 compiling main.c...
 linking...
-Program Size: Code=52488 RO-data=3756 RW-data=456 ZI-data=34920  
+Program Size: Code=52548 RO-data=3756 RW-data=468 ZI-data=34916  
 FromELF: creating hex file...
 "FDI\FDI.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +55,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
