实现了数传的机载端向地面端通信

--- a/MDK-ARM/FDI/FDI.build_log.htm
+++ b/MDK-ARM/FDI/FDI.build_log.htm
@@ -22,13 +22,66 @@ Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
 C:\Users\user\Documents\GitHub\FlightControler\MDK-ARM\FlightControler.uvprojx
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-Project File Date:  05/17/2025
+Project File Date:  05/18/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keilv5\ARM\ARMCC\Bin'
-Build target 'FlightControler'
+Rebuild target 'FlightControler'
+assembling startup_stm32h743xx.s...
+compiling stm32h7xx_hal_timebase_tim.c...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_cortex.c...
+compiling stm32h7xx_hal_flash.c...
+compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_msp.c...
+compiling freertos.c...
+compiling stm32h7xx_hal_rcc.c...
+compiling stm32h7xx_hal_rcc_ex.c...
+compiling main.c...
+compiling stm32h7xx_it.c...
+compiling stm32h7xx_hal_tim.c...
+compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_i2c_ex.c...
+compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_mmc_ex.c...
+compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal_exti.c...
+compiling stm32h7xx_hal_mmc.c...
+compiling stm32h7xx_hal_sd.c...
+compiling stm32h7xx_ll_sdmmc.c...
+compiling stm32h7xx_hal_sd_ex.c...
+compiling stm32h7xx_ll_delayblock.c...
+compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal_dma_ex.c...
+compiling croutine.c...
+compiling event_groups.c...
+compiling list.c...
+compiling stm32h7xx_hal_i2c.c...
+compiling queue.c...
+compiling stream_buffer.c...
+compiling timers.c...
+compiling tasks.c...
+compiling heap_1.c...
+compiling cmsis_os.c...
+compiling port.c...
+compiling stm32h7xx_hal_pwr_ex.c...
+compiling signal.c...
+compiling stm32h7xx_hal_uart_ex.c...
+compiling system_stm32h7xx.c...
+compiling bsp_driver_sd.c...
+compiling fatfs_platform.c...
+compiling CRC_Table.c...
+compiling navigation.c...
+compiling syscall.c...
+compiling diskio.c...
+compiling jy901b.c...
+compiling ff_gen_drv.c...
+compiling taskinit.c...
+compiling ccsbcs.c...
+compiling sd_diskio.c...
+compiling stm32h7xx_hal_uart.c...
 compiling control.c...
 ..\Code\Src\control.c(99): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	pitch = AHRSData.Pitch*57.3;
@@ -36,85 +89,19 @@ compiling control.c...
   	roll = AHRSData.Roll*57.3-1.45;
 ..\Code\Src\control.c(101): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	yaw = AHRSData.Heading*57.3;
-..\Code\Src\control.c: 3 warnings, 0 errors
-linking...
-Program Size: Code=52576 RO-data=3756 RW-data=504 ZI-data=34920  
-FromELF: creating hex file...
-"FDI\FDI.axf" - 0 Error(s), 3 Warning(s).
-=======
-=======
->>>>>>> Stashed changes
-Project File Date:  05/08/2025
-
-<h2>Output:</h2>
-*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keilv5\ARM\ARMCC\Bin'
-Rebuild target 'FlightControler'
-assembling startup_stm32h743xx.s...
-compiling stm32h7xx_hal_cortex.c...
-compiling stm32h7xx_hal_timebase_tim.c...
-compiling stm32h7xx_hal_hsem.c...
-compiling stm32h7xx_hal_msp.c...
-compiling stm32h7xx_hal_tim_ex.c...
-compiling stm32h7xx_hal_flash_ex.c...
-compiling stm32h7xx_hal_rcc.c...
-compiling stm32h7xx_hal_gpio.c...
-compiling stm32h7xx_hal_flash.c...
-compiling freertos.c...
-compiling stm32h7xx_it.c...
-compiling main.c...
-compiling stm32h7xx_hal_tim.c...
-compiling stm32h7xx_hal_rcc_ex.c...
-compiling stm32h7xx_hal_dma.c...
-compiling stm32h7xx_hal_mmc_ex.c...
-compiling stm32h7xx_hal_mdma.c...
-compiling stm32h7xx_hal_i2c_ex.c...
-compiling stm32h7xx_ll_sdmmc.c...
-compiling stm32h7xx_hal_exti.c...
-compiling stm32h7xx_hal.c...
-compiling stm32h7xx_hal_mmc.c...
-compiling stm32h7xx_hal_pwr.c...
-compiling stm32h7xx_ll_delayblock.c...
-compiling stm32h7xx_hal_sd_ex.c...
-compiling stm32h7xx_hal_i2c.c...
-compiling stm32h7xx_hal_dma_ex.c...
-compiling croutine.c...
-compiling event_groups.c...
-compiling list.c...
-compiling stm32h7xx_hal_sd.c...
-compiling stream_buffer.c...
-compiling queue.c...
-compiling stm32h7xx_hal_pwr_ex.c...
-compiling timers.c...
-compiling heap_1.c...
-compiling tasks.c...
-compiling cmsis_os.c...
-compiling port.c...
-compiling signal.c...
-compiling bsp_driver_sd.c...
-compiling telemetry.c...
-compiling stm32h7xx_hal_uart_ex.c...
-compiling system_stm32h7xx.c...
-compiling CRC_Table.c...
-compiling fatfs_platform.c...
-compiling navigation.c...
-compiling jy901b.c...
-compiling diskio.c...
-compiling sd_diskio.c...
-compiling ff_gen_drv.c...
-compiling control.c...
-..\Code\Src\control.c(92): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+..\Code\Src\control.c(112): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	volatile double pitch = AHRSData.Pitch*57.3;
-..\Code\Src\control.c(93): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+..\Code\Src\control.c(113): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	volatile double roll = AHRSData.Roll*57.3;
-..\Code\Src\control.c(94): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+..\Code\Src\control.c(114): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	volatile double yaw = AHRSData.Heading*57.3;
-..\Code\Src\control.c: 3 warnings, 0 errors
-compiling stm32h7xx_hal_uart.c...
-compiling taskinit.c...
-compiling ccsbcs.c...
+..\Code\Src\control.c: 6 warnings, 0 errors
 compiling fatfs.c...
-compiling syscall.c...
 compiling ff.c...
+compiling telemetry.c...
+..\Code\Src\telemetry.c(9): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *__restrict__"
+  	sprintf(TelemetrySendBuff,"Roll:%0.2f Pitch:%0.2f \r\n",AHRSData.Roll,AHRSData.Pitch);
+..\Code\Src\telemetry.c: 1 warning, 0 errors
 compiling tf.c...
 compiling receiver.c...
 compiling FDILink.c...
@@ -135,13 +122,9 @@ compiling FDI_send.c...
 ..\HardWare\FDILink\FDI_send.c: 1 warning, 0 errors
 compiling siyi.c...
 linking...
-Program Size: Code=52308 RO-data=3756 RW-data=444 ZI-data=35516  
+Program Size: Code=57088 RO-data=3952 RW-data=516 ZI-data=35012  
 FromELF: creating hex file...
-"FDI\FDI.axf" - 0 Error(s), 9 Warning(s).
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
+"FDI\FDI.axf" - 0 Error(s), 13 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -164,15 +147,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-Build Time Elapsed:  00:00:03
-=======
-Build Time Elapsed:  00:00:29
->>>>>>> Stashed changes
-=======
-Build Time Elapsed:  00:00:29
->>>>>>> Stashed changes
+Build Time Elapsed:  00:00:27
 </pre>
 </body>
 </html>
